--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -99,8 +99,10 @@
                            Праздник и мастер класс по пицце!
                         </h4>
                         <p class="txt-alg-jf">
-                            Ароматный, манящий и бесконечно вкусный запах кофе, если Вы Кофеман, это ваш день!
-			    Экскурсия в настоящий Мир кофе, от зеленых зернышек до самого вкусного напитка дня! 
+                          Ваш ребенок просит праздник, а до Дня рождения еще далеко? <br/>
+                          Именно для Вас мы приготовили TIK TOK PATI! Игры и танцы, фото и видео для TIK TOK, а еще мастер класс по вкуснейшей пицце!
+                          Море веселья и отличного настроения!<br/>
+                          Не забудь своих друзей, в большой компании всегда веселей и вкусней!
                         </p>
                         <hr>
                         <div class="alert alert-warning mt-3">
@@ -174,21 +176,20 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>12:30</b> - сбор группы, после минутки позитива пешая прогулка до места начала экскурсии! Участие по предварительной записи и предоплате 50%!
+                                            <b>11:50</b> - сбор группы р-не Малого рынка!
                                         </p>
-                                        <p><b>18:00 - 18:40</b> - экскурсия
-                                            по частной пивоварне. Мы увидим варочный
-                                            и бродильный цеха, почувствуем дух хмеля
-                                            и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>12:40 - 14:40</b> 
-                                          Мы увидим весь "путь кофе" от зеленых зернышек, до ароматного напитка. 
-					  Услышим рассказ местного экскурсовода о   видах кофе и вариациях его
-					  приготовления , тонкостях кофейного искусства! 
-					  Мы продегустируем вкуснейший кофе: американо, эспрессо,  капучино... 
+                                        <p><b>12:00 - 13:00 (13:20)</b> - 
+                                          Мы станцуем зажигательные танцы,
+                                          поиграем в самые веселые игры. 
+                                          Сделаем фото и видео TIK TOK PATI.
+                                          Приготовим вкуснейшую пиццу с сыром,
+                                          ветчиной и помидорками.
+                                          Угостимся сделанными пиццами на вкусном столе с чаем!
+                                          Все это и море позитива на TIK TOK PATI!
                                         </p>
+                                        <hr>
 					<p>
-					  Бодрые и в отличном настроении, купим самый вкусный 
-					  кофе друзьям и родственникам <span style="color: red;" class="fa fa-heart"></span>
+					  *время указано предварительно и может быть незначительно изменено без ущерба программе!
 					</p> 
                                     </div>
                                 </div>
@@ -200,19 +201,19 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                    экскурсия "50 оттенков кофе Isla";
+                                    Программа TIK TOK PATI (игры, танцы);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 5 видов кофе;
+                                    МК по пицце (круглая форма, соус, ветчина, моцарелла, помидор, нарезка продуктов, раскатывание теста дети производят самостоятельно) и чай;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                  встреча и сопровождение представителя Нового поворота;
+                                   пицца сделанная Вашим ребенком;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    неописуемый аромат и восторг, бодрость и прекрасное настроение;
+                                    встреча от представителя Нового поворота;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    магнит от "Нового поворота".
+                                    магнит от "Нового поворота" и прекрасное настроение.
                                 </li>
                             </ul>
                         </div>
