--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -222,10 +222,10 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                   дополнительные расходы (покупка кофе);
+                                   дополнительные расходы (покупка дополнительных сладостей: пряники, зефирки, кофе-чай взрослым);
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                    проезд до места начала экскурсии и обратно ;
+                                    проезд до места начала экскурсии и обратно.
                                 </li>
                                 <ul>
                         </div>
