--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -189,7 +189,7 @@
                                         </p>
                                         <hr>
 					<p>
-					  *время указано предварительно и может быть незначительно изменено без ущерба программе!
+					 <i> *время указано предварительно и может быть незначительно изменено без ущерба программе!</i>
 					</p> 
                                     </div>
                                 </div>
