--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -99,9 +99,13 @@
                            Праздник и мастер класс по пицце!
                         </h4>
                         <p class="txt-alg-jf">
-                          Ваш ребенок просит праздник, а до Дня рождения еще далеко? <br/>
+                          Ваш ребенок просит праздник, а до Дня рождения еще далеко?
+                        </p>
+                        <p class="txt-alg-jf">
                           Именно для Вас мы приготовили TIK TOK PATI! Игры и танцы, фото и видео для TIK TOK, а еще мастер класс по вкуснейшей пицце!
-                          Море веселья и отличного настроения!<br/>
+                         </p>
+                         <p class="txt-alg-jf">
+                          Море веселья и отличного настроения!
                           Не забудь своих друзей, в большой компании всегда веселей и вкусней!
                         </p>
                         <hr>
