--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -6,14 +6,14 @@
     <title>TicToc pati | Новый поворот | Праздник и мастер класс по пицце  </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Экскурсии Запорожье |Экскурсии выходного дня | Мастер классы ">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Экскурсия и дегустация кофе Исла, Пиво_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Праздник и мастер класс по пицце, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Праздник и мастер класс по пицце в Запороже, мероприятия Запорожья, афиша Запорожье, экскурсии Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Кофе Isla">
-    <meta property="og:description" content="Экскурсия и дегустация кофе Isla!"/>
+    <meta property="og:title" content="Tic Toc pati">
+    <meta property="og:description" content="Праздник и мастер класс по пицце"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://novipovorot.pp.ua/page-cofe-Isla.html"/>
-    <meta property="og:image" content="images/cofe-max.jpg">
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-TicToc-pati.html"/>
+    <meta property="og:image" content="images/TicToc-max.jpg">
     <!--End Open Graph data-->
 
     <script>
