--- a/packages.html
+++ b/packages.html
@@ -200,6 +200,31 @@
                 </div>
                 <!--  //Лимонарий -->
 
+                <!--  TicToc -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-LOL.html">
+                            <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+                                Tic Toc pati
+                            </a>
+                        </h5>
+                        <p class="">
+                         Праздник и мастер класс по пицце!
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //TicToc-->
+
                 <!--  ЛОЛ -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
