--- a/packages.html
+++ b/packages.html
@@ -203,7 +203,7 @@
                 <!--  TicToc -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-LOL.html">
+                        <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
                             <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
