--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>404</title>
+<title>404 | Новый Поворот</title>
 	
 	    <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
