--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </h3>
                     <p class="mt-4">
                         Сделаем Вашу жизнь ярче и разнообразнее.
-                        Экскурсии в Запорожье и Карпатах, походы в Турции, мастер-классы и дегустации...
+                        Туры выходного дня из Запорожья, экскурсии в Запорожье и Карпатах, походы в Турции, мастер-классы и дегустации...
                         Самые неожиданные места Украины и Европы.
                     </p>
                     <p class="mt-3">
