--- a/packages.html
+++ b/packages.html
@@ -216,7 +216,7 @@
                             </a>
                         </h5>
                         <p class="">
-                         Праздник и мастер класс по пицце с Новым поворотом
+                         Праздник и мастер класс с Новым поворотом
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
