--- a/packages.html
+++ b/packages.html
@@ -212,7 +212,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                                Tic Toc pati
+                                Tic Tok pati
                             </a>
                         </h5>
                         <p class="">
