--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', экскурсии Запорожье, путешевствия Запорожье, походы по Турции из Запорожье, мастер-классы, дегустации в Запорожье" />
     <meta name="description" content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
-    
+    <!-- bing -->
+    <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
     <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
     <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
