--- a/packages.html
+++ b/packages.html
@@ -106,6 +106,7 @@
                            50 оттенков кофе Isla. Экскурсия и дегустация...
                         </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>9 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -131,6 +132,7 @@
                             Экскурсия и дегустация в частной пивоварне
                         </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>7 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -152,6 +154,7 @@
                         </h5>
                         <p class="">Мраморное и Средиземное море...</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
                         </ul>
                     </div>
@@ -171,6 +174,7 @@
                         <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
                         <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>5-9 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
@@ -194,6 +198,7 @@
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>14 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -219,6 +224,7 @@
                          Праздник и мастер класс с Новым поворотом
                         </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -242,6 +248,7 @@
                         </h5>
                         <p class="">Праздник в стиле Лол с любимыми персонажами!</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -265,6 +272,7 @@
                         </h5>
                         <p class="">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>28 Февраля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -288,6 +296,7 @@
                         </h5>
                         <p class=""> Походы в Карпаты с комфортом...</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
                         </ul>
                     </div>
@@ -311,6 +320,7 @@
                         </h5>
                         <p class="">Оригинальный подарок своими руками к 8 марта!</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>6 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -336,6 +346,7 @@
                            Фестиваль тюльпанов и экскурсия в Стамбуле...
                         </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>29-27 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
                         </ul>
                     </div>
