--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                             Экскурсия и дегустация в частной пивоварне
                         </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>7 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -332,6 +333,7 @@
                         </h5>
                         <p class="">Мраморное и Средиземное море..</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
                         </ul>
                     </div>
@@ -351,6 +353,7 @@
                         <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
                         <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>5-9 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
@@ -374,6 +377,7 @@
                         </h5>
                         <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>14 Марта 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
