--- a/page-LOL.html
+++ b/page-LOL.html
@@ -94,7 +94,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> не запланировано <!-- 21 Февраля 2021 Года --></span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано <!-- 21 Февраля 2021 Года --></span>
                                 </li>
                             </ul>
                         </div>
