--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -3,13 +3,13 @@
 <html lang="ru">
 
 <head>
-    <title>TicToc pati | Новый поворот | Праздник и мастер класс по пицце  </title>
+    <title>Tic Tok pati | Новый поворот | Праздник и мастер класс по пицце  </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description" content="Туры выходного дня 'Новый поворот', Праздник и мастер класс по пицце, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Праздник и мастер класс по пицце в Запороже, мероприятия Запорожья, афиша Запорожье, экскурсии Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Tic Toc pati">
+    <meta property="og:title" content="Tic Tok pati">
     <meta property="og:description" content="Праздник и мастер класс по пицце"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-TicToc-pati.html"/>
