--- a/index.html
+++ b/index.html
@@ -708,14 +708,15 @@
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <!-- Preload script-->
     <script>
-  $(window).on('load', function () {
-    $('body').addClass('loaded_hiding');
+  window.onload = function () {
+    document.body.classList.add('loaded_hiding');
     window.setTimeout(function () {
-      $('body').addClass('loaded');
-      $('body').removeClass('loaded_hiding');
+      document.body.classList.add('loaded');
+      document.body.classList.remove('loaded_hiding');
     }, 500);
   }
-    </script>
+</script>
+
     <!-- Aos script -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
