--- a/packages.html
+++ b/packages.html
@@ -83,7 +83,7 @@
 
     <section class="packages py-5">
         <div class="container py-lg-4 py-sm-3">
-            <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Откройте Для Себя Наши Путешествия</h3>
+            <h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 
