--- a/page-Beer.html
+++ b/page-Beer.html
@@ -94,7 +94,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>7 Марта 2021
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>17 Апреля 2021
                                         Года</span>
                                 </li>
                             </ul>
@@ -183,15 +183,15 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>14:50, 07.03</b> - сбор группы и после минутки
+                                            <b>17:50, 17.04</b> - сбор группы и после минутки
                                             позитива пешая прогулка до места начала
                                             экскурсии!
                                         </p>
-                                        <p><b>15:00 - 15:40, 07.03</b> - экскурсия
+                                        <p><b>18:00 - 18:40, 17.04</b> - экскурсия
                                             по частной пивоварне. Мы увидим варочный
                                             и бродильный цеха, почувствуем дух хмеля
                                             и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>15:40 - 16:15, 07.03</b> дегустация 6 видов
+                                        <p><b>18:40 - 19:15, 17.04</b> дегустация 6 видов
                                             вкуснейшего натурального пива. Сваренного
                                             на уже полюбившейся пивоварне: травяное,
                                             пшеничное, облепихово-медовое, синяя
