--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -92,7 +92,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>28 февраля 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>11 Апреля 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
@@ -179,7 +179,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><strong>11:00</strong> сбор в районе острова Хортица
+                                        <p><strong>12:00, 11.04</strong> сбор в районе острова Хортица
                                             (дополнительно оповещаем всех кто записался
                                             за 2 дня до начала экскурсии).
                                             Минутка позитива и в путешествие.
