--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -1,2 +1,47 @@
 <!-- Georgia -->
 <h1>Georgia</h1>
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+    <title>Турция | Новый поворот | Походы по Турции</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Походы по Турции">
+    <meta property="og:description" content="Расписание походов..."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Turkey.html"/>
+    <meta property="og:image" content="images/Turkey-max.jpg">
+    <!--End Open Graph data-->
+
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+
+    <!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+    <!--//favicon.ico-->
+    <!-- css files -->
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
+    <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    <!-- //css files -->
+
+    <!-- google fonts -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+        rel="stylesheet">
+    <link
+        href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+    <!-- //google fonts -->
+
+</head>
