--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -83,13 +83,13 @@
             <div class="row df-cntr">
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Турция</h3>
+                    <h3 class="title">Грузия</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/Turkey-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/Georgia-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <h4 class="mb-3">
-                            Походы по Турции
+                            Походы по Грузии
                         </h4>
                         <p class="txt-alg-jf">
                             Расписание походов по Турции...
