--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Туры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
     <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
     <!-- Open Graph data-->
-    <meta property="og:title" content="Походы по Турции">
+    <meta property="og:title" content="Походы по Грузии">
     <meta property="og:description" content="Расписание походов..."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Turkey.html"/>
-    <meta property="og:image" content="images/Turkey-max.jpg">
+    <meta property="og:image" content="images/Georgia-max.jpg">
     <!--End Open Graph data-->
 
     <script>
