--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Турция | Новый поворот | Походы по Турции</title>
+    <title>Грузия | Новый поворот | Походы по Грузии</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Походы по Турции, расписание походов, Стамбул_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Походы по Грузии, расписание походов, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    
     <!-- Open Graph data-->
     <meta property="og:title" content="Походы по Грузии">
     <meta property="og:description" content="Расписание походов..."/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://novipovorot.pp.ua/page-Turkey.html"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Georgia.html"/>
     <meta property="og:image" content="images/Georgia-max.jpg">
     <!--End Open Graph data-->
 
@@ -91,13 +91,13 @@
                             Походы по Грузии
                         </h4>
                         <p class="txt-alg-jf">
-                            Расписание походов по Турции...
+                            Расписание походов по Грузии...
                         </p>
                         <hr>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>190$</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>200$</span></li>
 
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>9 Дней</span></li>
                         </ul>
                         <br>
                         <p>
@@ -148,26 +148,26 @@
 
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание походов: </li>
-                           <!-- <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 14.02.2021 - 21.02.2021 </li>-->
-                            <li class="list-group-item"> Средиземное море и античность <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 20.03.2021 - 27.03.2021 </li>
-                            <li class="list-group-item"> Горы, озера Даламана и море <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 28.03.2021 - 04.04.2021</li>
-                            <li class="list-group-item"> Ликийская тропа от Фетхие до Каша <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
-                            <li class="list-group-item"> От Олимпуса к Средиземному морю <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 01.05.2021 - 08.05.2021 </li>
-                            <li class="list-group-item"> Горы Улудаг, Мраморное море, Стамбул <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 15.05.2021 - 21.05.2021 </li>
-                            <li class="list-group-item"> Горы Улудаг, Мраморное море, Стамбул<br /> <span
-                                    class="fa fa-calendar mr-2"></span> 05.06.2021 - 12.06.2021 </li>
-                            <li class="list-group-item"> Горы Улудаг, Мраморное море, Стамбул <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 17.09.2021 - 24.09.2021 </li>
-                            <li class="list-group-item"> Горы Улудаг, Мраморное море, Стамбул<br /> <span
-                                    class="fa fa-calendar mr-2"></span> 09.10.2021 - 16.10.2021 </li>
-                            <li class="list-group-item"> Горы, озера Даламана и море <br /> <span
-                                    class="fa fa-calendar mr-2"></span> 20.11.2021 - 27.11.2021 </li>
+                            <li class="list-group-item">Поход по Грузии 2020: Сванетия  (Местия) и Колхида (75км) <br />
+                             <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 13.06.2021 </li>
+
+                            <li class="list-group-item"> Сванетия (Местия) и Колхида (75 км)<br /> <span
+                                    class="fa fa-calendar mr-2"></span> 14.06.2021 - 22.06.2021 </li>
+
+                            <li class="list-group-item"> Сванетия (Местия) и Колхида (75 км)  <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 27.06.2021 - 05.07.2021 </li>
+
+                            <li class="list-group-item"> Тушетия и Хевсуретия (80 км) <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 01.07.2021 - 09.07.2021 </li>
+
+                            <li class="list-group-item"> Тушетия и Хевсуретия (80 км) <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 19.08.2021 - 27.08.2021 </li>
+
+                            <li class="list-group-item"> Сванетия (Местия) и Колхида (75 км) <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 03.09.2021 - 11.09.2021  </li>
+
+                            <li class="list-group-item"> Сванетия (Местия) и Колхида (75 км) <br /> <span
+                                    class="fa fa-calendar mr-2"></span> 18.09.2021 - 26.09.2021 </li>
                         </ul>
                     </div>
 			<!-- liq pay -->
