--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -148,7 +148,7 @@
 
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание походов: </li>
-                            <li class="list-group-item">Поход по Грузии 2020: Сванетия  (Местия) и Колхида (75км) <br />
+                            <li class="list-group-item"> Сванетия  (Местия) и Колхида (75км) <br />
                              <span class="fa fa-calendar mr-2"></span> 05.06.2021 - 13.06.2021 </li>
 
                             <li class="list-group-item"> Сванетия (Местия) и Колхида (75 км)<br /> <span
