--- a/packages.html
+++ b/packages.html
@@ -86,6 +86,28 @@
             <h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
+       
+                <!--  Грузия -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Georgia.html">
+                            <img src="images/Georgia-mini.jpg" alt="Georgia" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>200</span><span class="fa fa-usd"></span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Georgia.html"> Походы по Турции</a>
+                        </h5>
+                        <p class="">Расписание походов по Грузии...</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>9 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Грузия  -->
 
                 <!--  Кофе -->
                 <div class="col-lg-3 col-sm-6 mb-5">
