--- a/packages.html
+++ b/packages.html
@@ -91,7 +91,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Georgia.html">
-                            <img src="images/Georgia-mini.jpg" alt="Georgia" class="img-fluid" />
+                            <img src="images/Georgia-min.jpg" alt="Georgia" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>200</span><span class="fa fa-usd"></span></p>
                     </div>
