--- a/packages.html
+++ b/packages.html
@@ -96,9 +96,9 @@
                         <p><span class="fa fa-tags"></span> <span>200</span><span class="fa fa-usd"></span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Грузия</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Georgia.html"> Походы по Турции</a>
+                            <a href="https://novipovorot.pp.ua/page-Georgia.html"> Походы по Грузии</a>
                         </h5>
                         <p class="">Расписание походов по Грузии...</p>
                         <ul class="listing mt-3">
