--- a/packages.html
+++ b/packages.html
@@ -227,7 +227,7 @@
                 </div>
                 <!--  //Лимонарий -->
 
-                <!--  TicToc -->
+                <!--  TikTok -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
@@ -239,7 +239,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                                Tic Tok pati
+                                Tik Tok pati
                             </a>
                         </h5>
                         <p class="">
@@ -251,7 +251,7 @@
                         </ul>
                     </div>
                 </div>
-                <!--  //TicToc-->
+                <!--  //TikTok-->
 
                 <!--  ЛОЛ -->
                 <div class="col-lg-3 col-sm-6 mb-5">
