--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -82,7 +82,7 @@
             <div class="row df-cntr">
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title text-center">Tic Tok pati</h3>
+                    <h3 class="title text-center">Tik Tok pati</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/TicToc-max.jpg" alt="news image" class="img-fluid">
