--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Туры выходного дня из Запорожья - "Новый Поворот"</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', экскурсии Запорожье, путешевствия Запорожье, походы по Турции из Запорожье, мастер-классы, дегустации в Запорожье" />
-   <!-- <meta name="description" content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации"> -->
+  <!--  <meta name="keywords" content="Tуры выходного дня 'Новый поворот', экскурсии Запорожье, путешевствия Запорожье, походы по Турции из Запорожье, мастер-классы, дегустации в Запорожье" />-->
+    <meta name="description" content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
     <!-- bing -->
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
     <!-- Open Graph data-->
