--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
     
     <!-- canonical link -->
-   <!-- <link rel="canonical" href="https://novipovorot.pp.ua/index.html"/>-->
+    <link rel="canonical" href="https://novipovorot.pp.ua/"/>
     <!-- //canonical link -->
 
     <!--favicon.ico-->
