--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
                     <li class=""><a href="about.html"> Отзывы </a></li>
                     <li class=""><a href="packages.html">Туры</a></li>
                     <li class="active"><a href="contact.html">Контакты</a></li>
+                    <li class="active"><a href="contact.html">Блог</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
                 </ul>
             </nav>
