--- a/page-wine.html
+++ b/page-wine.html
@@ -3,14 +3,14 @@
 <html lang="ru">
 
 <head>
-<title>Букет к 8 марта | Новый поворот | Вкусный мастер класс по созданию Сладкого букета</title>
+<title>Вино | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Вкусный мастер класс по созданию Сладкого букета, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
-    <meta name="keywords" content="Tуры выходного дня 'Новый поворот', Вкусный мастер класс по созданию Сладкого букета, 8_марта_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Вино, Экскурсии Запорожье | Экскурсии выходного дня | Мастер классы ">
+    <!--<meta name="keywords" content="Tуры выходного дня 'Новый поворот', Вкусный мастер класс по созданию Сладкого букета, 8_марта_Запороже, мероприятия_Запорожья, афиша_Запорожье, экскурсии_Запорожье " />-->
     <!-- Open Graph data-->
-    <meta property="og:title" content="Букет к 8 марта">
-    <meta property="og:description" content="Вкусный мастер класс по созданию Сладкого букета..."/>
+    <meta property="og:title" content="Вино">
+    <meta property="og:description" content="Вино..."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-eight-march.html"/>
     <meta property="og:image" content="images/eight-march-max.jpg">
