--- a/page-wine.html
+++ b/page-wine.html
@@ -79,6 +79,173 @@
     <!-- //banner -->
 
 
+<!--single page-->
+    <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
+        <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
+            <div class="row df-cntr">
+
+                <div class="col-lg-8 col-xl-9 main-title-text">
+                    <h3 class="title">Букет к 8 марта</h3>
+                </div>
+                <div class="col-lg-8 col-xl-9 blog-left-sub">
+                    <img src="images/eight-march-max.jpg" alt="news image" class="img-fluid">
+                    <div class="blog-two-two">
+                        <div class="blog-date-time mb-2">
+                            <ul class="listing mt-3">
+                                <li>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>6 марта 2021 Года</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <h4 class="mb-3">
+                            Сладкий букет к 8 марта
+                        </h4>
+                        <p class="txt-alg-jf">
+                            Оригинальный подарок своими руками к 8 марта!
+                            Вкусный мастер класс по созданию Сладкого букета из маршмеллоу!
+                            Научитесь делать оригинальный и красивый подарок к любому празднику!
+                        </p>
+                        <hr>
+                        <!-- Alert warning -->
+                        <div class="alert alert-warning mt-3 ">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
+                            <span class="txt-alg-jf">Количество мест ограничено! Запись уже открыта!</span>
+                        </div>
+                        <ul class="listing">
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                        <br>
+                        <p>
+                            Не забудь своих друзей, в большой компании всегда веселей!
+                        </p>
+                        <p>
+                            Бронирование билетов осуществляется заранеe: </p>
+                        <div class="page-booking-btn ml-1 mt-1 mb-1 row">
+                            <button type="button" class="btn btn-outline-primary mr-3"> <a
+                                    href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
+
+                        </div>
+                        <p>
+                            Присоединяйтесь к сообществу в социальных сетях:
+                        <ul class="social_section_1info mt-1 mb-1">
+                            <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
+                                        class="fa fa-facebook"></span></a></li>
+                            <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span
+                                        class="fa fa-vk"></span></a></li>
+                            <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
+                                        class="fa fa-instagram"></span></a></li>
+                            <li class="mb-2 twitter"><a href="https://twitter.com/novipovorot"><span
+                                        class="fa fa-twitter"></span></a></li>
+                            <li class="viber">
+                                <a
+                                    href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp">
+                                    <svg id="Bold" fill="white" enable-background="new 0 0 24 24" height="13"
+                                        viewBox="0 0 24 24" width="13" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m23.155 13.893c.716-6.027-.344-9.832-2.256-11.553l.001-.001c-3.086-2.939-13.508-3.374-17.2.132-1.658 1.715-2.242 4.232-2.306 7.348-.064 3.117-.14 8.956 5.301 10.54h.005l-.005 2.419s-.037.98.589 1.177c.716.232 1.04-.223 3.267-2.883 3.724.323 6.584-.417 6.909-.525.752-.252 5.007-.815 5.695-6.654zm-12.237 5.477s-2.357 2.939-3.09 3.702c-.24.248-.503.225-.499-.267 0-.323.018-4.016.018-4.016-4.613-1.322-4.341-6.294-4.291-8.895.05-2.602.526-4.733 1.93-6.168 3.239-3.037 12.376-2.358 14.704-.17 2.846 2.523 1.833 9.651 1.839 9.894-.585 4.874-4.033 5.183-4.667 5.394-.271.09-2.786.737-5.944.526z" />
+                                        <path
+                                            d="m12.222 4.297c-.385 0-.385.6 0 .605 2.987.023 5.447 2.105 5.474 5.924 0 .403.59.398.585-.005h-.001c-.032-4.115-2.718-6.501-6.058-6.524z" />
+                                        <path
+                                            d="m16.151 10.193c-.009.398.58.417.585.014.049-2.269-1.35-4.138-3.979-4.335-.385-.028-.425.577-.041.605 2.28.173 3.481 1.729 3.435 3.716z" />
+                                        <path
+                                            d="m15.521 12.774c-.494-.286-.997-.108-1.205.173l-.435.563c-.221.286-.634.248-.634.248-3.014-.797-3.82-3.951-3.82-3.951s-.037-.427.239-.656l.544-.45c.272-.216.444-.736.167-1.247-.74-1.337-1.237-1.798-1.49-2.152-.266-.333-.666-.408-1.082-.183h-.009c-.865.506-1.812 1.453-1.509 2.428.517 1.028 1.467 4.305 4.495 6.781 1.423 1.171 3.675 2.371 4.631 2.648l.009.014c.942.314 1.858-.67 2.347-1.561v-.007c.217-.431.145-.839-.172-1.106-.562-.548-1.41-1.153-2.076-1.542z" />
+                                        <path
+                                            d="m13.169 8.104c.961.056 1.427.558 1.477 1.589.018.403.603.375.585-.028-.064-1.346-.766-2.096-2.03-2.166-.385-.023-.421.582-.032.605z" />
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="telegram"><a href="https://t.me/novipovorot"><span
+                                        class="fa fa-paper-plane"></span></a></li>
+                        </ul>
+                        </p>
+
+                        
+                        <!-- Описание экскурсии -->
+
+                        <div class="accordion mt-3 mb-3" id="accordionExample">
+                            <div class="card">
+                                <div class="card-header" id="headingOne">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                            data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <span class="fa fa-angle-right"></span> Описание экскурсии...
+                                        </button>
+                                    </h5>
+                                </div>
+
+                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                    data-parent="#accordionExample">
+                                    <div class="card-body txt-alg-jf">
+                                        <p><strong>10:20</strong>
+                                            сбор группы и после минутки позитива пешая прогулка до места начала
+                                            праздника!
+                                        </p>
+                                        <p><strong>10:30 - 11:30</strong>
+                                            Мастер-класс по созданию Сладкого
+                                            букета к 8 марта! Вкуснейшие маршмеллоу, красивая
+                                            упаковочка и магия...
+                                            В течении часа вы научитесь творить свою
+                                            красоту... Именно к празднику 8 марта по
+                                            просьбам наших туристов, мастер-класс для души!
+                                            Поспешите бронировать, места ограничены!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- //Описание экскурсии -->
+
+                        <div class="alert alert-success">
+                            <h5 class="alert-heading">В стоимость входит:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-success">
+                                    Мастер-класс "Сладкий букет";
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    материалы для создания букета: маршмеллоу,
+                                    упаковочная бумага, шпажки, скотч;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    букет по окончанию мастер-класса
+                                    вы можете скушать или забрать с собой;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    встреча от представителя Нового поворота;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    прекрасное настроение;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    магнит от Нового поворота
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="alert alert-danger">
+                            <h5 class="alert-heading">В стоимость не входит:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-danger ">
+                                    проезд до места сбора на экскурсию и обратно;
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                    дополнительные расходы (покупка дополнительных сладостей).
+                                </li>
+                                <ul>
+                        </div>
+                      <!-- <div id="liqpay_checkout"></div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <!--//single page-->
+
+    
 <!--footer -->
     <footer>
         <section class="footer footer_w3layouts_section_1its py-5">
