--- a/page-wine.html
+++ b/page-wine.html
@@ -85,7 +85,7 @@
             <div class="row df-cntr">
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Букет к 8 марта</h3>
+                    <h3 class="title">Вино</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/eight-march-max.jpg" alt="news image" class="img-fluid">
