--- a/page-wine.html
+++ b/page-wine.html
@@ -88,17 +88,17 @@
                     <h3 class="title">Вино</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/eight-march-max.jpg" alt="news image" class="img-fluid">
+                    <img src="images/wine-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>6 марта 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>20 Марта 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            Сладкий букет к 8 марта
+                           Экскурсия на винный завод, дегустация вина и улиток
                         </h4>
                         <p class="txt-alg-jf">
                             Оригинальный подарок своими руками к 8 марта!
