--- a/page-wine.html
+++ b/page-wine.html
@@ -101,17 +101,19 @@
                            Экскурсия на винный завод, дегустация вина и улиток
                         </h4>
                         <p class="txt-alg-jf">
-                            10 видов вин плюс улитки 360 грн.
-                             5 видов вин плюс улитки 300 грн.
-Предоплата 100грн. 
-Время 11 и 16, при брони учняйте дату, время и наполнение эскурсии!
+                            
                         </p>
                         <hr>
                         <!-- Alert warning -->
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
-                            <span class="txt-alg-jf">Количество мест ограничено! Запись уже открыта!</span>
+                            <span class="txt-alg-jf">
+                             10 видов вин плюс улитки 360 грн.
+                             5 видов вин плюс улитки 300 грн.
+                             Предопла та 100грн. 
+                             Время 11:00 и 16:00, при бронировании уточняйте дату, время и наполнение эскурсии!
+                            </span>
                         </div>
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
