--- a/page-wine.html
+++ b/page-wine.html
@@ -101,7 +101,11 @@
                            Экскурсия на винный завод, дегустация вина и улиток
                         </h4>
                         <p class="txt-alg-jf">
-                            
+                            Узнаете все о производстве натурального вина, от ведущего технолога ТМ "Вина Запорожья".
+                            Продегустируете вина под рассказ сомелье о вкусовом сочетании данных напитков.
+                            Попробуете удивительно вкусных запеченных улиток от zap.ravlik.
+                            Сделаете фото в дегустационном зале у грузинских и украинских ростовых кукол.
+                            Длительность мероприятия  2-3 часа.
                         </p>
                         <hr>
                         <!-- Alert warning -->
