--- a/page-wine.html
+++ b/page-wine.html
@@ -113,9 +113,9 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
-                             10 видов вин плюс улитки 360 грн.
-                             5 видов вин плюс улитки 300 грн.
-                             Предопла та 100грн. 
+                             10 видов вин плюс улитки 360 грн.<br/>
+                             5 видов вин плюс улитки 300 грн.<br/>
+                             Предоплата 100грн. 
                              Время 11:00 и 16:00, при бронировании уточняйте дату, время и наполнение эскурсии!
                             </span>
                         </div>
