--- a/page-wine.html
+++ b/page-wine.html
@@ -113,6 +113,7 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
+                             Регистрация обязательна!<br/>
                              10 видов вин плюс улитки 360 грн.<br/>
                              5 видов вин плюс улитки 300 грн.<br/>
                              Предоплата 100грн. 
