--- a/page-wine.html
+++ b/page-wine.html
@@ -120,7 +120,7 @@
                         <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
-                            <span class="fa fa-thumb-tack"></span><strong> Внимание!</strong><br />
+                            <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
                             <span class="txt-alg-jf">
                              
                              10 видов вин плюс улитки 360 грн.<br/>
